# rn-dash

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  config.example.json  config.example.toml
.github/workflows/: ci.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-scaffold-and-tui-shell/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-metro-process-control/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-VERIFICATION.md
.planning/phases/03-worktree-browser-git-and-rn-commands/: 03-01-SUMMARY.md  03-02-PLAN.md  03-03-SUMMARY.md  03-05-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-config-and-jira-integration/: 04-01-PLAN.md  04-02-PLAN.md  04-03-SUMMARY.md  04-UAT.md  04-VERIFICATION.md
.planning/phases/05-worktree-switching-and-claude-code/: 05-01-SUMMARY.md  05-UAT.md  05-VERIFICATION.md
.planning/phases/05.1-milestone-feedback/: 05.1-01-PLAN.md  05.1-01-SUMMARY.md  05.1-02-SUMMARY.md  05.1-04-PLAN.md  05.1-06-PLAN.md  05.1-08-PLAN.md  05.1-08-SUMMARY.md  05.1-CONTEXT.md  05.1-VERIFICATION.md
.planning/phases/05.2-milestone-feedbacks/: 05.2-01-PLAN.md  05.2-03-PLAN.md  05.2-03-SUMMARY.md  05.2-04-SUMMARY.md  05.2-05-PLAN.md  05.2-05-SUMMARY.md  05.2-07-PLAN.md  05.2-09-SUMMARY.md  05.2-UAT.md  05.2-VERIFICATION.md
.planning/phases/06-final-ux-polish/: 06-01-PLAN.md  06-CONTEXT.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-labels-removal/: 07-01-PLAN.md  07-01-SUMMARY.md
.planning/phases/08-palette-and-keybinding-rework/: 08-01-PLAN.md  08-04-PLAN.md  08-05-PLAN.md  08-UAT.md
.planning/phases/09-generalization-and-github-prep/: 09-02-PLAN.md  09-02-SUMMARY.md
.planning/quick/1-auto-refresh-stale-data-with-periodic-ba/: 1-PLAN.md  1-SUMMARY.md
.planning/quick/2-add-command-to-remove-and-purge-a-worktr/: 2-PLAN.md  2-SUMMARY.md
.planning/quick/260322-3nj-remove-metro-pane-and-move-metro-shortcu/: 260322-3nj-PLAN.md  260322-3nj-SUMMARY.md
.planning/quick/260322-7pi-when-running-on-ios-device-don-t-show-th/: 260322-7pi-PLAN.md  260322-7pi-SUMMARY.md
.planning/quick/260322-niz-metro-palette-should-reset-to-root-after/: 260322-niz-PLAN.md  260322-niz-SUMMARY.md
.planning/quick/260326-i4g-parse-metro-output-to-detect-device-conn/: 260326-i4g-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: release.sh
src/: action.rs  app.rs  event.rs  main.rs  tui.rs
src/domain/: command.rs  metro.rs  mod.rs  refresh.rs  worktree.rs
src/infra/: android_prefs.rs  command_runner.rs  config.rs  devices.rs  jira.rs  jira_cache.rs  labels.rs  mod.rs  multiplexer.rs  port.rs  process.rs  sim_history.rs  tmux.rs  worktrees.rs
src/ui/: error_overlay.rs  footer.rs  help_overlay.rs  mod.rs  modals.rs  panels.rs  theme.rs
(+80 files in other folders)
