[package]
name = "rn-dash"
version = "0.1.0"
edition = "2024"
description = "Terminal dashboard for managing React Native worktrees, metro, and git"
license = "MIT"
repository = "https://github.com/cubicme/rn-dash"
homepage = "https://github.com/cubicme/rn-dash"
keywords = ["ratatui", "react-native", "terminal", "dashboard", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI core — crossterm accessed via ratatui::crossterm, NOT as a direct dep
ratatui = { version = "0.30", features = ["crossterm"] }
# Enable event-stream feature so EventStream is available via ratatui::crossterm::event::EventStream
# Same version as ratatui-crossterm uses — cargo feature-unifies, no duplication
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Stream utilities — provides StreamExt trait for EventStream::next()
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"
color-eyre = "0.6"

# Logging (file only — never stdout in TUI)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Async trait support — enables async fn in traits via #[async_trait::async_trait]
async-trait = "0.1"

# Serialization — used for label persistence (labels.json) and future config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client for JIRA REST API (Phase 4)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Process group kill (SIGKILL to PGID) for metro cleanup
libc = "0.2"
